--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- 휴대폰에서도 호환되기 위해 작성 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?1">
     <title>NAVER</title>
 </head>
 <body>
