--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -78,7 +78,7 @@
             --color_shop: #9858f5;
             --color_shop_rgb: 152, 88, 245;
         }
-        html, body {
+        html, body, form {
             margin: 0;
             padding: 0;
         }
@@ -94,6 +94,7 @@
         #header {
             text-align: left;
             position: relative;
+            height: 64px;
         }
         #header-hamburger, #header-naverpay, #header-notice {
             position: absolute;
@@ -195,7 +196,43 @@
                     <span class="blind">알림</span>
                 </button>
             </div>
-            <div id = "search"></div>
+            <style>
+                #search > form {
+                    display: inline-block;
+                    width: 708px;
+                    height: 60px;
+                    border: 1px solid #03c75a;
+                    border-radius: 33px;
+                    text-align: left;
+                }
+                #search > form > input {
+                    width: 480px;
+                    height: 100%;
+                    padding: 17px 0px;
+                    border: none;
+                    outline: none;
+                }
+                #search > form svg {
+                    width: 24px;
+                    height: 24px;
+                }
+                #search > form a {
+                    width: 68px;
+                    height: 100%;
+                    padding: 17px;
+                    margin-right: 12px;
+                }
+            </style>
+            <div id = "search">
+                <form action="">
+                    <a href="#">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.273 12.845 7.376 0H0v24h7.727V11.155L16.624 24H24V0h-7.727v12.845z"></path></svg>
+                    </a>
+                    <label for="search-input" class = "blind">검색어 입력</label>
+                    <input id = "search-input" type = "text">
+                    <button class="blind">검색</button>                    
+                </form>
+            </div>
             <div id = "nav"></div>
             <div id = "main"></div>
         </div>
