--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -222,15 +222,86 @@
                     padding: 17px;
                     margin-right: 12px;
                 }
+                #search-svg {
+                    display: inline-block;
+                    width: 68px;
+                    margin-right: 12px;
+                    height: 100%;
+                    padding-left: 10px;
+                }
+                #search-svg svg {
+                    width: 24px;
+                    height: 24px;
+                    fill: #03c75a;
+                }
+                #search-input {
+                    width: 100%;
+                    height: 58px;
+                    color: #000;
+                    color: var(--color_search);
+                    z-index: 10;
+                    position: relative;
+                    padding: 17px 0;
+                    background-color: rgba(0, 0, 0, 0);
+                    -webkit-box-sizing: border-box;
+                    box-sizing: border-box;
+                    font-size: 2rem;
+                    line-height: 24px;
+                    font-weight: bold;
+                    outline: 0;
+                }
+                #search-right {
+                    display: inline-block;
+                }
+                #search-keyboard::before {
+                    content: "";
+                    display: inline-block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-position: -148px -301px;
+                    background-repeat: no-repeat;
+                    width: 24px;
+                    height: 14px;
+                }
+                #search-recent::before {
+                    content: "";
+                    display: inline-block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-position: -154px -211px;
+                    background-repeat: no-repeat;
+                    width: 10px;
+                    height: 6px;
+                }
+                #search-button::before {
+                    content: "";
+                    display: inline-block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-position: -405px -105px;
+                    background-repeat: no-repeat;
+                    width: 25px;
+                    height: 25px;
+                }
             </style>
             <div id = "search">
                 <form action="">
-                    <a href="#">
+                    <a id = "search-svg" href="#">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.273 12.845 7.376 0H0v24h7.727V11.155L16.624 24H24V0h-7.727v12.845z"></path></svg>
                     </a>
                     <label for="search-input" class = "blind">검색어 입력</label>
-                    <input id = "search-input" type = "text">
-                    <button class="blind">검색</button>                    
+                    <input id = "search-input" type = "text" placeholder="검색어를 입력하세요.">
+                    <div id = "search-right">
+                        <button href="#" id = "search-keyboard">
+                            <span class = "blind">입력 도구</span> 
+                        </button>
+                        <button href="#" id = "search-recent">
+                            <span class = "blind">자동완성/최근검색어펼치기</span>
+                        </button>
+                        <button id = "search-button">
+                            <div><span class = "blind">검색</span></div>
+                        </button>
+                    </div>                
                 </form>
             </div>
             <div id = "nav"></div>
