--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -193,12 +193,12 @@
                 <button id = "header-notice">
                     <!-- before -->
                     <div></div>
-                    <span class="blind">알림</span>
+                    <span class="blind">알림</span> 
                 </button>
             </div>
             <style>
                 #search > form {
-                    display: inline-block;
+                    display: inline-flex;
                     width: 708px;
                     height: 60px;
                     border: 1px solid #03c75a;
@@ -223,11 +223,13 @@
                     margin-right: 12px;
                 }
                 #search-svg {
-                    display: inline-block;
+                    display: inline-flex;
                     width: 68px;
                     margin-right: 12px;
                     height: 100%;
                     padding-left: 10px;
+                    justify-content: center;
+                    align-items: center;
                 }
                 #search-svg svg {
                     width: 24px;
@@ -251,7 +253,16 @@
                     outline: 0;
                 }
                 #search-right {
-                    display: inline-block;
+                    display: flex;
+                    flex: 1;
+                    justify-content: flex-end;
+                    align-items: stretch;
+                }
+                #search-keyboard, #search-recent, #search-button {
+                    background: transparent;
+                    border: none;
+                    cursor: pointer;
+                    
                 }
                 #search-keyboard::before {
                     content: "";
