--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -81,6 +81,9 @@
         html, body, form {
             margin: 0;
             padding: 0;
+            font-size: 10.5px;
+            line-height: 10.5px;
+            font-family: -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
         }
         #wrap {
             text-align: center;
@@ -204,7 +207,6 @@
                     border: 1px solid #03c75a;
                     border-radius: 33px;
                     text-align: left;
-                    font-family: -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
                 }
                 #search > form:hover {
                     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 12);
@@ -345,7 +347,105 @@
                     </div>                
                 </form>
             </div>
-            <div id = "nav"></div>
+            <style>
+                #nav > ul {
+                    display: flex;
+                    list-style-type: none;
+                    justify-content: center;
+                    font-size: 1.4rem;
+                    line-height: 20px;
+                }
+                #nav a{
+                    text-decoration: none;
+                }
+                #nav li {
+                    width: 64px;
+                    margin-left: 4px;
+                }
+                #nav a:visited {
+                    color: black;
+                }
+                #nav li:nth-of-type(1) {
+                    margin-left: 0;
+                }
+                #nav li:nth-of-type(2) {
+
+                }
+            </style>
+            <div id = "nav">
+                <ul>
+                    <li>
+                        <a herf="#">
+                            <div>
+                            </div>
+                            <span>메일</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="#">
+                            <div>
+                            </div>
+                            <span>카페</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="#">
+                            <div>
+                            </div>
+                            <span>블로그</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="#">
+                            <div>
+                            </div>
+                            <span>쇼핑</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="">
+                            <div>
+                            </div>
+                            <span>뉴스</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="">
+                            <div>
+                            </div>
+                            <span>증권</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="">
+                            <div>
+                            </div>
+                            <span>부동상</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="">
+                            <div>
+                            </div>
+                            <span>지도</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="">
+                            <div>
+                            </div>
+                            <span>웹툰</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a herf="">
+                            <div>
+                            </div>
+                            <span class="blind">더보기</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div id = "main"></div>
         </div>
     </div>
