--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -78,12 +78,17 @@
             --color_shop: #9858f5;
             --color_shop_rgb: 152, 88, 245;
         }
-        html, body, form {
-            margin: 0;
-            padding: 0;
+        html, body {
             font-size: 10.5px;
             line-height: 10.5px;
+            margin: 0;
+            padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
+            letter-spacing: -0.4px;
+        }
+        form, ul {
+            margin: 0;
+            padding: 0;   
         }
         #wrap {
             text-align: center;
@@ -126,7 +131,8 @@
             background-image: url(./sp_main.png);
             background-repeat: no-repeat;
             /* 사이즈 정하기 */
-            background-size: 463px 440px;
+            /* background-size: 463px 440px; */
+            background-size: 452px 436px;
             width: 26px;
             height: 26px;
             display: inline-block;
@@ -149,8 +155,9 @@
         
         #header-naverpay > div {
             /* 위치 정하기 */
-            background-position: -248px -260px;
-            width: 30;
+            background-position: -243px -258px;
+            width: 32px;
+            height: 32px;
         }
         #header-notice {
             right: -10px;
@@ -158,7 +165,7 @@
 
         #header-notice > div {
             /* 위치 정하기 */
-            background-position: -311px -232px;
+            background-position: -307px -232px;
         }
         #main {
             height: 2000px;
@@ -348,6 +355,9 @@
                 </form>
             </div>
             <style>
+                #nav {
+                    margin: 12px;
+                }
                 #nav > ul {
                     display: flex;
                     list-style-type: none;
@@ -355,48 +365,115 @@
                     font-size: 1.4rem;
                     line-height: 20px;
                 }
-                #nav a{
-                    text-decoration: none;
-                }
                 #nav li {
                     width: 64px;
                     margin-left: 4px;
+                    display: flex;
+                }
+                #nav a{
+                    text-decoration: none;
+                    text-align: center;
                 }
                 #nav a:visited {
                     color: black;
                 }
+                #nav a div {
+                    margin: 0 auto;
+                    position: relative;
+                    text-align: center;
+                    margin-bottom: 7px;
+                }
+                #nav a div::after {
+                    content: '';
+                    margin: 2px;
+                    display: inline-block;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-repeat: no-repeat;
+                    width: 40px;
+                    height: 40px;
+                    z-index: 1;
+                    position: relative;              
+                }
+
                 #nav li:nth-of-type(1) {
                     margin-left: 0;
                 }
-                #nav li:nth-of-type(2) {
-
+                #nav li a div::before {
+                    content: "";
+                    display: block;
+                    display: inline-block;
+                    position: absolute;
+                    top: -1px;
+                    left: -3px;
+                    background-image: url(https://pm.pstatic.net/resources/asset/sp_main.eae24523.png);
+                    background-size: 452px 436px;
+                    background-position: -153px -142px;
+                    background-repeat: no-repeat;
+                    width: 50px;
+                    height: 50px;
+                    z-index: 0;
+                }
+                #nav li:nth-of-type(1) a div::after {
+                    background-position: -205px -219px;
+                }
+                #nav li:nth-of-type(2) a div::after {
+                    background-position: -41px -219px;
+                }
+                #nav li:nth-of-type(3) a div::after {
+                    background-position: -0px -219px;
+                }
+                #nav li:nth-of-type(4) a div::after {
+                    background-position: -41px -260px;
+                }
+                #nav li:nth-of-type(5) a div::after {
+                    background-position: -270px -205px;
+                }
+                #nav li:nth-of-type(6) a div::after {
+                    background-position: -123px -260px;
+                }
+                #nav li:nth-of-type(7) a div::after {
+                    background-position: 0px -260px;
+                }
+                #nav li:nth-of-type(8) a div::after {
+                    background-position: -270px 0px;
+                }
+                #nav li:nth-of-type(9) a div::after {
+                    background-position: -164px -260px;
+                }
+                #nav li:nth-of-type(10) a div::after {
+                    background-position: -270px -164px;
+                }
+                #nav li a span {
+                    margin-top: 7px;
                 }
             </style>
             <div id = "nav">
                 <ul>
                     <li>
-                        <a herf="#">
+                        <a herf="">
                             <div>
+
                             </div>
                             <span>메일</span>
                         </a>
                     </li>
                     <li>
-                        <a herf="#">
+                        <a herf="">
                             <div>
                             </div>
                             <span>카페</span>
                         </a>
                     </li>
                     <li>
-                        <a herf="#">
+                        <a herf="">
                             <div>
                             </div>
                             <span>블로그</span>
                         </a>
                     </li>
                     <li>
-                        <a herf="#">
+                        <a herf="">
                             <div>
                             </div>
                             <span>쇼핑</span>
@@ -420,7 +497,7 @@
                         <a herf="">
                             <div>
                             </div>
-                            <span>부동상</span>
+                            <span>부동산</span>
                         </a>
                     </li>
                     <li>
