--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -639,6 +639,8 @@
                     color: rgba(8,8,8,.5);
                     display: flex;
                     justify-content: flex-start;
+                    line-height: 23px;
+                    margin-bottom: 17px;
                 }
                 #main-newstand header .bold{
                     font-weight: bold;
@@ -647,6 +649,10 @@
                 #main-newstand-gray {
                     display: flex;
                     justify-content: flex-start;
+                    height: 50px;
+                    padding: 12px 20px;
+                    background-color: var(--color_option_bg);
+                    border-radius: 4px;
                 }
                 #main-newstand a {
                     text-decoration: none;
@@ -657,8 +663,30 @@
                 #main-newstand a:hover {
                     text-decoration: underline;
                 }
+                #main-newstand-grid {
+                    display: flex;
+                    display: grid;
+                    height: 224px;
+                    grid-template-rows: repeat(4, 1fr);
+                    width: 790px;
+                    grid-template-columns: repeat(6, 1fr);
+                    border: 1px solid var(--color_boarder_in);
+                    border-radius: 4px;
+                    margin-top: 18px;
+                    grid-gap: 1px;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: var(--color_boarder_in);
+                }
+                #main-newstand-grid > dev {
+                    height: 100%;
+                    background-color: white;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
                 #main-newstand footer {
-                    border-top: 1px solid var(--color_board_in);
+                    border-top: 1px solid var(--color_boarder_in);
                     padding: 10px 0 11px;
                 }
             </style>
@@ -686,32 +714,32 @@
                                     <a href="#">홈</a>
                                 </div>
                             </div>
-                            <div id="main-newstand-grid">
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                                <div>언론사</div>
-                            </div>
+                        </div>
+                        <div id="main-newstand-grid">
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
+                            <div>언론사</div>
                         </div>
                         <footer>
                             <button><span class="blind">이전</span></button>
