index.html의 배경색 white로 변경

--- a/제로초 인강/index.html
+++ b/제로초 인강/index.html
@@ -96,7 +96,7 @@
         }
         #wrap-center {
             width: 1280px;
-            background-color: yellow;
+            /* background-color: yellow; */
             display: inline-block;
         }
         #header {
