--- a/Javascript 쇼핑몰 미니게임 과제/index.html
+++ b/Javascript 쇼핑몰 미니게임 과제/index.html
@@ -10,36 +10,35 @@
   <body>
     <!-- Logo -->
     <img src="./img/logo.png" alt="" class="logo">
+
     <!-- Buttons -->
-    <button class="btn">
-      <img src="./img/blue_t.png" alt="tshirt" class="imgBtn">
-    </button>
-
-    <button class="btn">
-      <img src="./img/blue_p.png" alt="pants" class="imgBtn">
-    </button>
-
-    <button class="btn">
-      <img src="./img/blue_s.png" alt="skirt" class="imgBtn">
-    </button>
-
-    <button class="btn colorBtn blue">
-      Blue
-    </button>
-
-    <button class="btn colorBtn yellow">
-      Yellow
-    </button>
-
-    <button class="btn colorBtn pink">
-      Pink
-    </button>
+    <div class="buttons">
+      <button class="btn">
+        <img src="./img/blue_t.png" alt="tshirt" class="imgBtn">
+      </button>
+      <button class="btn">
+        <img src="./img/blue_p.png" alt="pants" class="imgBtn">
+      </button>
+      <button class="btn">
+        <img src="./img/blue_s.png" alt="skirt" class="imgBtn">
+      </button>
+      <button class="btn colorBtn blue">
+        Blue
+      </button>
+      <button class="btn colorBtn yellow">
+        Yellow
+      </button>
+      <button class="btn colorBtn pink">
+        Pink
+      </button>
+    </div>
+    
     <!-- Items -->
-     <ul class="items">
+    <ul class="items">
       <li class="item">
-        <img src="./img/blue_t.png" alt="tshirt" class="item__thumbnail">
+        <img src="./img/yellow_p.png" alt="tshirt" class="item__thumbnail">
         <span class="item__discription">mail, large</span>
       </li>
-     </ul>
+    </ul>
   </body>
 </html>
