JavaScript - display items

--- a/Javascript 쇼핑몰 미니게임 과제/index.html
+++ b/Javascript 쇼핑몰 미니게임 과제/index.html
@@ -34,11 +34,6 @@
     </div>
     
     <!-- Items -->
-    <ul class="items">
-      <li class="item">
-        <img src="./img/yellow_p.png" alt="tshirt" class="item__thumbnail">
-        <span class="item__discription">mail, large</span>
-      </li>
-    </ul>
+    <ul class="items"></ul>
   </body>
 </html>
